# opcua_server

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: opcua.h
src/: main.c  opcua.c
